Fixed text wrapping, line-height, and alignment issue in account_setup TOS
The label for TOS checkbox would have wrong line-height when overflowing
one line, it would break out of the box and in general look like an ugly
duckling.
This is now fixed.

Language bugs #290
See: https://trello.com/c/EkIVgOLR

--- a/frontend/app/less/util-pages.less
+++ b/frontend/app/less/util-pages.less
@@ -70,6 +70,15 @@
 
         .checkbox-box {
           margin-left: 32px;
+
+          label {
+            display: inline;
+            margin: 0 0 0 10px;
+          }
+
+          .validation-failed-msg {
+            margin-left: 3px;
+          }
         }
       }
     }
